feat(back): configurar filtros de segurança e política de CORS (WebConfig)