@@ -5,23 +5,43 @@ import com.example.event_manager.domain.dtos.EventResponseDto;
 import com.example.event_manager.domain.entities.Administrator;
 import com.example.event_manager.domain.entities.Event;
 import com.example.event_manager.infra.exceptions.ResourceNotFoundException;
+import com.example.event_manager.repositories.AdminRepository;
 import com.example.event_manager.repositories.EventRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class EventService {
 
     private final EventRepository eventRepository;
+    private final AdminRepository adminRepository;
+
+    /**
+     * Método auxiliar para recuperar o Administrator logado de forma segura.
+     * Resolve o erro de ClassCastException ao lidar com o Principal do SecurityContext.
+     */
+    private Administrator getAuthenticatedAdmin() {
+        Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        String email;
+
+        if (principal instanceof UserDetails) {
+            email = ((UserDetails) principal).getUsername();
+        } else {
+            email = principal.toString();
+        }
+
+        return adminRepository.findByEmail(email)
+                .orElseThrow(() -> new ResourceNotFoundException("Administrador não encontrado"));
+    }
 
     public EventResponseDto createEvent(EventRequestDto dto) {
-        // Pega o admin que o SecurityFilter salvou no 'crachá' (contexto)
-        Administrator admin = (Administrator) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        // Busca o admin de forma segura pelo e-mail extraído do token
+        Administrator admin = getAuthenticatedAdmin();
 
         Event event = new Event();
         event.setTitle(dto.title());
@@ -35,15 +55,40 @@ public class EventService {
     }
 
     public List<EventResponseDto> listAllByAdmin() {
-        Administrator admin = (Administrator) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        // Busca apenas os eventos que pertencem ao ID do admin logado
-        return eventRepository.findByAdministratorId(admin.getId())
-                .stream()
+        // Busca o admin logado
+        Administrator admin = getAuthenticatedAdmin();
+
+        // Usa o método findByAdministrator que deve estar no seu EventRepository
+        return eventRepository.findByAdministrator(admin).stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public EventResponseDto updateEvent(Long id, EventRequestDto dto) {
+        // 1. Busca o evento original
+        Event event = eventRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Evento não encontrado"));
+
+        // 2. Recupera o admin logado com segurança
+        Administrator admin = getAuthenticatedAdmin();
+
+        // 3. Valida se o admin logado é o dono do evento
+        if (!event.getAdministrator().getId().equals(admin.getId())) {
+            throw new RuntimeException("Você não tem permissão para alterar este evento.");
+        }
+
+        // 4. Atualiza os campos
+        event.setDate(dto.date());
+        event.setLocation(dto.location());
+        event.setTitle(dto.title());
+        event.setImageUrl(dto.imageUrl());
+
+        Event updatedEvent = eventRepository.save(event);
+        return toDto(updatedEvent);
     }
 
     public void deleteEvent(Long id) {
+        // Opcional: Adicionar validação de dono aqui também antes de deletar
         eventRepository.deleteById(id);
     }
 
@@ -56,31 +101,5 @@ public class EventService {
                 event.getImageUrl(),
                 event.getAdministrator().getId()
         );
-    }
-
-    public EventResponseDto updateEvent(Long id, EventRequestDto dto) {
-        // 1. Busca o evento pelo ID (Requisito 5 do PDF)
-        Event event = eventRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Evento não encontrado"));
-
-        // 2 recupera o admin logado via token
-        Administrator admin = (Administrator) org.springframework.security.core.context.SecurityContextHolder
-                .getContext().getAuthentication().getPrincipal();
-
-        // 3 valida se o admin é o dono do envento
-        if(!event.getAdministrator().getId().equals(admin.getId())) {
-            throw new RuntimeException("Você não pode alterar este evento.");
-        }
-
-        // 4 atualiza os campos exigidos: Data e localização
-        event.setDate(dto.date());
-        event.setLocation(dto.location());
-
-        // opcional: pode alterar o titulo e imagem se quiser
-        event.setTitle(dto.title());
-        event.setImageUrl(dto.imageUrl());
-
-        Event updateEvent = eventRepository.save(event);
-        return toDto(updateEvent);
     }
 }
